--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 
   Welcome to the HTML Portfolio Project
 
-  <div class="header"></div>
+  <div class="header">
+    <h1>Jake Smith</h1>
+  </div>
 
 </body>
 </html>
