The Tagline Element

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <div class="header">
     <h1>Jake Smith</h1>
     <h2>Software Developer and student-for-life</h2>
+    <div class="tagline"></div>
   </div>
 
 </body>
