A Little About You

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
   <div class="header">
     <h1>Jake Smith</h1>
     <h2>Software Developer and student-for-life</h2>
-    <div class="tagline"></div>
+    <div class="tagline">
+      <h3>Here's What I Do</h3>
+      <p>I work with C# / .NET in the oil and gas industry.  I try to keep up with Ruby on Rails as it is my go-to for building web applications.  And I follow Angular 2 as closely as I can because I think it is (as well as other frameworks like it) the future of software development.  For instance, check out Electron and NativeScript to see what I mean...
+    </div>
   </div>
 
 </body>
