--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
     </div>
   </div>
 
-  <ul class="skills"></ul>
+  <ul class="skills">
+    <h3>My Skills</h3>
+    <p>I love creating applications that makes people's lives easier with these technologies:</p>
+  </ul>
 
 </body>
 </html>
