--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,16 @@
     </div>
   </div>
 
-  <ul class="skills">
+  <div class="skills">
     <h3>My Skills</h3>
     <p>I love creating applications that makes people's lives easier with these technologies:</p>
-  </ul>
+    <ul>
+      <li>C# / .NET</li>
+      <li>Ruby on Rails</li>
+      <li>Angular 2</li>
+      <li>HTML / CSS</li>
+    </ul>
+  </div>
 
 </body>
 </html>
