--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,10 @@
     </ul>
   </div>
 
-  <div class="contact"></div>
+  <div class="contact">
+    <h3>Contact me</h3>
+    <p>Email me at <a href="mailto:jakehockey10@gmail.com">jakehockey10@gmail.com</a>.
+  </div>
 
 </body>
 </html>
