--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
 
   <div class="contact">
     <h3>Contact me</h3>
-    <p>Email me at <a href="mailto:jakehockey10@gmail.com">jakehockey10@gmail.com</a>.
+    <p>Email me at <a href="mailto:jakehockey10@gmail.com">jakehockey10@gmail.com</a>.</p>
+    <p>You can also check me out on <a href="https://github.com/jakehockey10" target="_blank">GitHub</a>.</p>
   </div>
 
 </body>
